--- a/physical-ai-textbook/package.json
+++ b/physical-ai-textbook/package.json
@@ -30,6 +30,7 @@
     "@docusaurus/tsconfig": "3.9.2",
     "@docusaurus/types": "3.9.2",
     "@tailwindcss/postcss": "^4.1.17",
+    "@vercel/node": "^3.0.0",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
